# rust_pose_1_rust_only

./: .gitignore  Cargo.toml  README.md  run_cuda.ps1  run_cuda_release.ps1
src/: camera.rs  domain.rs  main.rs  math.rs  metrics.rs  onnx_pose.rs  output.rs  pipeline.rs  render.rs
