[package]
name = "rust_pose_1_rust_only"
version = "0.3.0"
edition = "2021"

[features]
default = []
camera = ["dep:opencv"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
opencv = { version = "0.94", optional = true, default-features = false, features = ["videoio", "highgui", "imgproc"] }
